--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server: 
   port: 9999
+spring:
+  application:
+    name: eorder
 ---
 spring:
   profiles: dev,local
@@ -15,3 +18,9 @@ spring:
     username: sa
     password: nabtest
     platform: org.hibernate.dialect.H2Dialect
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    preferIpAddress: true
